fix: fix credits to screen bottom on mobile

--- a/src/features/projects/styles/ProjectsMap.module.scss
+++ b/src/features/projects/styles/ProjectsMap.module.scss
@@ -564,10 +564,10 @@
       margin-left: 0px;
     }
     padding: 5px 7px 4px;
-    width: calc(100vw - 14px);
-    right: 8px;
-    bottom: 6px;
-    border-radius: 6px;
+    width: 100%;
+    right: 0;
+    bottom: 0;
+    border-radius: 0;
     display: flex;
     justify-content: space-between;
   }
